--- a/index.html
+++ b/index.html
@@ -3,38 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta name="author" content="Raymund Antrone">
-    <meta name="description" content="WDD Frontend Development Raymund Antrone course assignmnet portal"> 
-    <title>Raymund antrone - WDD 230 - Web Frontend Development</title>
+    <meta name="author" content="Raymund Antrone">
+    <meta name="description" content="WDD Frontend Development Raymund Antrone course assignment portal"> 
+    <title>Raymund Antrone - WDD 230 - Web Frontend Development</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300" rel="stylesheet">
-
-    <link rel="stylesheet" href="styles/normilize.css">
-    <link rel="stylesheet" type="text/css" href="styles/base.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300" rel="stylesheet">
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     <link rel="icon" href="favicon.ico">
     <meta property="og:title" content="Raymund Antrone's WDD Frontend Development portal">
     <meta property="og:type" content="website">
     <meta property="og:image" content="">
     <meta property="og:url" content="">
-   
 </head>
 <body>
     <header>
-        <img src="images/photo.jpg" alt=" Raymund Antrone" loading="lazy" width="30" height="30">
+        <img src="images/photo.jpg" alt="Raymund Antrone" loading="lazy" width="30" height="30">
         <h1>Raymund Antrone</h1>
     </header>
     <a id="menu" href="#"></a>
     <nav>
-    <ul class="navigation">
-        <li><a href="#" title="Home">Home</a></li>
-        <li><a href="" target="_blank">Site Plan</a></li>
-        <li><a href="" target="_blank">Chamber</a></li>
-        <li><a href="" target="_blank">BYU-Idaho</a></li> 
-        <li><a href="" target="_blank">Scripture</a></li>
-    </ul>
+        <ul class="navigation">
+            <li><a href="#" title="Home">Home</a></li>
+            <li><a href="site-plan.html" target="_blank">Site Plan</a></li>
+            <li><a href="chamber.html" target="_blank">Chamber</a></li>
+            <li><a href="byu-idaho.html" target="_blank">BYU-Idaho</a></li> 
+            <li><a href="scripture.html" target="_blank">Scripture</a></li>
+        </ul>
     </nav>
     <main>
         <div class="temple-name">
@@ -42,46 +39,48 @@
         </div>
         <picture class="hero">
             <source srcset="images/temple-small.webp" media="(max-width:400px)">
-            <source srcset="images/temple-miduem.webp" media="(max-width: 960px)">
+            <source srcset="images/temple-medium.webp" media="(max-width: 960px)">
             <img src="images/temple-large.webp.jpg" alt="Bacolod City Philippines Temple" loading="lazy" width="1280" height="800">
         </picture>
         <h2 class="title">WDD 230: Web Frontend Development</h2>    
         <div class="container">
-        <section class="card">
-            <div class="card-title"><h3>Learning Activities</h3></div>
-            <div class="card-content">
-            <ul class="lessons">
-                <li>Lesson 01: <a href=""> Holy Layout  |  JS Pen</a></li>
-                <li>Lesson 02:<a href=""></a><a href=""></a><a href=""></a> </li>
-                <li>Lesson 03:<a href=""></a> <a href=""></a><a href=""></a></li>
-                <li>Lesson 04:<a href=""></a></li>
-                <li>Lesson 05:<a href=""></a></li>
-                <li>Lesson 06:<a href=""></a><a href=""></a></li>
-                <li>Lesson 07: <a href=""></a> <a href=""></a></li>
-            </ul>
-            </div>
-        </section>
-        <section class="card">
-            <div class="card-title"><h3>Information</h3></div>
-            <div class="card-content">
-                <div>Location</div>
-                <div>Weather 🌤️</div>
-                <p>Number of Visits: <span class="visits"></span></p>
-            </div>
+            <section class="card">
+                <div class="card-title"><h3>Learning Activities</h3></div>
+                <div class="card-content">
+                    <ul class="lessons">
+                        <li>Lesson 01: <a href="#">Holy Layout | JS Pen</a></li>
+                        <li>Lesson 02: <a href="#"></a></li>
+                        <li>Lesson 03: <a href="#"></a></li>
+                        <li>Lesson 04: <a href="#"></a></li>
+                        <li>Lesson 05: <a href="#"></a></li>
+                        <li>Lesson 06: <a href="#"></a></li>
+                        <li>Lesson 07: <a href="#"></a></li>
+                    </ul>
+                </div>
+            </section>
+            <section class="card">
+                <div class="card-title"><h3>Information</h3></div>
+                <div class="card-content">
+                    <div>Location</div>
+                    <div>Weather 🌤️</div>
+                    <p>Number of Visits: <span class="visits"></span></p>
+                </div>
+            </section>
+        </div>
     </main>
     <footer>
         <div class="info">
-            <div class="copyright">
-                <p><span id="year">© 2024</span> | Raymund Antrone  | Bacolod City Philippines</p>
-                <img id="flag-wa" src="images/flag.jpg" alt="Philippines" loading="lazy" >
-            </div>
             <div class="social-links">
-                <a href="https://www.instagram.com/raymund_2010?igsh=MWFxbWNlYXM4YXJwZQ==" target="_blank">
+                <a href="https://www.instagram.com/raymund_2010?igshid=MWFxbWNlYXM4YXJwZQ==" target="_blank">
                     <img src="images/instagram.webp" alt="Instagram Logo" loading="lazy">
                 </a>
                 <a href="https://www.facebook.com/raymund.antrone?mibextid=ZbWKwL" target="_blank">
                     <img src="images/facebook.webp" alt="Facebook logo" loading="lazy">
                 </a>
+            </div>
+            <div class="copyright">
+                <p><span id="year">© 2024</span> | Raymund Antrone | Bacolod City Philippines</p>
+                <img id="flag-wa" src="images/flag.jpg" alt="Philippines Flag" loading="lazy">
             </div>
         </div>   
         <p id="lastModified"></p>
@@ -89,4 +88,3 @@
     <script src="scripts/getdates.js"></script>
 </body>
 </html>
-
