--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
         </div>   
         <p id="lastModified"></p>
     </footer>
-    <script src="scripts/getdates.js"></script>
+    <script src="scripts/getDates.js"></script>
+    <script>
+        document.getElementById("lastModified").innerText = "Last modified: " + document.lastModified;
+    </script>
 </body>
 </html>
