--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <nav>
         <ul class="navigation">
             <li><a href="#" title="Home">Home</a></li>
-            <li><a href="site-plan.html" target="_blank">Site Plan</a></li>
+            <li><a href=" https://rajacks.github.io/wdd230/lesson01/chamber-site-plan.html" target="_blank">Site Plan</a></li>
             <li><a href="chamber.html" target="_blank">Chamber</a></li>
             <li><a href="byu-idaho.html" target="_blank">BYU-Idaho</a></li> 
             <li><a href="scripture.html" target="_blank">Scripture</a></li>
