--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="card-content">
                     <ul class="lessons">
                         <li>Lesson 01: <a href="#">Holy Layout | JS Pen</a></li>
-                        <li>Lesson 02: <a href="#"></a></li>
+                        <li>Lesson 02: <a href="https://rajacks.github.io/wdd230/week02/design.html">Design</a></li>
                         <li>Lesson 03: <a href="#"></a></li>
                         <li>Lesson 04: <a href="#"></a></li>
                         <li>Lesson 05: <a href="#"></a></li>
