--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Raymund Antrone">
-    <meta name="description" content="WDD Frontend Development Raymund Antrone course assignment portal"> 
+    <meta name="description" content="WDD Frontend Development Raymund Antrone course assignment portal, The purpose of this website is to learn my cultures and why people love visit in this beautiful places"> 
     <title>Raymund Antrone - WDD 230 - Web Frontend Development</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
