--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
         </ul>
     </nav>    
     <main>
+        <div class="temple-name">
+            <p>Bacolod City Philippines Temple</p>
+        </div>
+        <picture class="hero">
+            <source srcset="images/temple-small.webp" media="(max-width:400px)">
+            <source srcset="images/temple-medium.webp" media="(max-width: 960px)">
+            <img src="images/temple-large.webp.jpg" alt="Bacolod City Philippines Temple" loading="lazy" width="1280" height="800">
+        </picture>
         <h2 class="title">WDD 230: Web Frontend Development</h2>    
         <div class="container">
             <section class="card">
@@ -41,7 +49,7 @@
                 <div class="card-content">
                     <ul class="lessons">
                         <li>Lesson 01: <a href="#">Holy Layout | JS Pen</a></li>
-                        <li>Lesson 02: <a href="https://rajacks.github.io/wdd230/week02/design.html">Design</a></li>
+                        <li>Lesson 02: <a href="https://rajacks.github.io/wdd230/week02/design.html"> -Design- |</a><a href="https://rajacks.github.io/wdd230/week02/media-query.html">-Media Query- | </a><a href="https://rajacks.github.io/wdd230/lesson02/design-principles.html"> - Design Principles -</a> </li>
                         <li>Lesson 03: <a href="#"></a></li>
                         <li>Lesson 04: <a href="#"></a></li>
                         <li>Lesson 05: <a href="#"></a></li>
