chamber-and-week02

--- a/week02/design-principles.html
+++ b/week02/design-principles.html
@@ -29,7 +29,7 @@
                 These are examples of the natural colors of my place, and I want to make it even more special and unique by incorporating its own cultural colors.
                 However, I don't want to add too much. The products are the protagonists given that the brand use their pictures to add pops of color. 
                 These colors are minimal, natural, and attractive.  </p>
-                <img class="flex-image" src="images/our place.webp" alt="Our Place website">
+                <img class="flex-image" src="images/our place.jpg" alt="Our Place website">
             </div> 
             </section>
             <section class="card">
