--- a/chamber/index.html
+++ b/chamber/index.html
@@ -46,7 +46,7 @@
             </picture>
             
             <div class="hero-text">
-                <h1>Bacolod City Delicacies Chamber of Commerce</h1>
+                <h1>Bacolod City Chamber of Commerce</h1>
                 <p>You can do great things in the community!</p>
                 <a class="button" href="https://rajacks.github.io/wdd230/chamber/join.html">Become a Member</a>
                 <!-- <button class="button">Become a Member</button> -->
