--- a/chamber/index.html
+++ b/chamber/index.html
@@ -71,7 +71,7 @@
     </section>
     <section class="Mission Vision">
         <div class="statement">
-            <h1>Our Mission Vision</h1>
+            <h1>Mission Vision</h1>
             <p>Our mission vision about the bacolod city of smile are to be made known into the international cultures
             And to represent the importance of natures and tourism . Where in  
             all can visit and Become more familiar with the places and delicacies
