--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <ul class="lessons">
                         <li>Lesson 01: <a href="#">Holy Layout | JS Pen</a></li>
                         <li>Lesson 02: <a href="https://rajacks.github.io/wdd230/week02/design.html"> -Design- |</a><a href="https://rajacks.github.io/wdd230/week02/media-query.html">-Media Query- | </a><a href="https://rajacks.github.io/wdd230/week02/design-principles.html"> - Design Principles -</a> </li>
-                        <li>Lesson 03: <a href="#"></a></li>
+                        <li>Lesson 03: <a href="https://rajacks.github.io/wdd230/week03/lazyload.html">-Lazy Loading- |</a><a href="https://rajacks.github.io/wdd230/week03/responsive-images.html">-Responsive Image- | </a><a href="https://rajacks.github.io/wdd230/week03/bom.html"> -Book of Mormon -</a></li>
                         <li>Lesson 04: <a href="#"></a></li>
                         <li>Lesson 05: <a href="#"></a></li>
                         <li>Lesson 06: <a href="#"></a></li>
@@ -67,6 +67,9 @@
                 </div>
             </section>
         </div>
+        <section class="map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d125476.40331280827!2d122.91932561785836!3d10.646416457845554!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33aed1aede61785b%3A0xea7972541b89f76b!2sBacolod%2C%20Negros%20Occidental!5e0!3m2!1sen!2sph!4v1709188783735!5m2!1sen!2sph" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </section>
     </main>
     <footer>
         <div class="info">
