--- a/chamber/index.html
+++ b/chamber/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Raymund Antrone">
-    <meta name="description" content="Bacolod City Philippines Chamber of Commerce and Discover page">
+    <meta name="description" content="Explore Bacolod City's Chamber of Commerce and discover the heart of the Philippines' dynamic business community. Learn about opportunities, services, and resources available, making Bacolod City a prime destination for investment and growth.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;500;800&display=swap" rel="stylesheet">
