--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -6,8 +6,8 @@
     <meta name="author" content="Raymund Antrone">
     <meta name="description" content="Bacolod City Philippines Chamber of Commerce and Discover page">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;500;800&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;500;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
     <link rel="stylesheet" href="styles/larger.css">
@@ -29,13 +29,14 @@
         </div>
         <a id="menu" href="#"></a>
         <nav>
-            <ul class="navigation">
-                <li><a href="https://rajacks.github.io/wdd230/chamber/">Home</a></li>
-                <li><a href="">Discover</a></li>
-                <li><a href="">Directory</a></li>
-                <li><a href="">Join</a></li>
-            </ul>
+        <ul class="navigation">
+            <li><a href="https://rajacks.github.io/wdd230/chamber/">Home</a></li>
+            <li><a href="">Discover</a></li>
+            <li><a href="">Directory</a></li>
+            <li><a href="">Join</a></li>
+        </ul>
         </nav>  
+       
     </header>
     <main class="grid-area">
         <section class="sidebar">
@@ -44,12 +45,12 @@
                 <p>Number of Visits: <span class="number-visits"></span></p>
             </div>
             <div class="details">
-                <h2>Header 1</h2>
+                <h2>header</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                 Soluta beatae enim, maiores rem voluptates vitae corporis nesciunt </p>
             </div>
             <div class="details">
-                <h2>Header 2</h2>
+                <h2>header</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                 Soluta beatae enim, maiores rem voluptates vitae corporis nesciunt 
                 adipisci repudiandae ipsam velit dolores, mollitia impedit alias 
@@ -57,8 +58,7 @@
             </div>
         </section>
         
-        <section class="main-content">
-            <h1>Explore Bacolod City</h1>
+        <section class="main">
             <picture>
                 <img loading="lazy" width="400" height="250" src="https://picsum.photos/id/215/400/250" alt="Beach.">
                 <p>Best view for visitors and beach</p>
