--- a/form.html
+++ b/form.html
@@ -54,11 +54,9 @@
 	<option value="4">4</option>
 	<option value="5">5</option>
 </datalist>
-            </fieldset>
-
-    <input type="submit" value="Create My Account">
-       
-       
+</fieldset>
+<input type="submit" value="Create My Account">
+</form>
     </main>
     <footer>
         <div class="info">
