--- a/form.html
+++ b/form.html
@@ -39,7 +39,7 @@
         <h1 class="header">Create Account Form</h1>
         <form method="get" action="record.html" class="course-form">
             <fieldset>
-                <label for="umane">Username* <input id="uname" type="text" name="uname" required></label>
+                <label>Username* <input type="text" name="uname" id="username" required></label>
                 <label for="pssw">Password* <input id="pssw" type="text" name="pssw" pattern=".{8}" placeholder="8 alphanumberic characters long" required></label>
                 <label for="rpssw"> Re-enter Password*<input id="rpssw" type="text" name="rpssw" required></label>
                 <label for="email">Email*<input id="email" type="email" name="email" placeholder="someone@gmail.com" title="A valid email address." pattern="[a-zA-Z0-9_.\-]+@.com" required></label>
