--- a/form.html
+++ b/form.html
@@ -36,30 +36,28 @@
     </ul>
     </nav>
     <main>
-        <h1 class="header">Create Account Form</h1>
-        <form method="get" action="record.html" class="course-form">
-            <fieldset>
-                <label>Username* <input type="text" name="uname" id="username" required></label>
-                <label for="pssw">Password* <input id="pssw" type="text" name="pssw" pattern=".{8}" placeholder="8 alphanumberic characters long" required></label>
-                <label for="rpssw"> Re-enter Password*<input id="rpssw" type="text" name="rpssw" required></label>
-                <label for="email">Email*<input id="email" type="email" name="email" placeholder="someone@gmail.com" title="A valid email address." pattern="[a-zA-Z0-9_.\-]+@.com" required></label>
-                <label for="r">Page Rating</label>
-<div id="rangevalue">0</div>
-<input type="range" id="r" name="r" min="0" max="5" value="0" step="1" list="rangevalues">
-<datalist id="rangevalues">
-	<option value="0">0</option>
-	<option value="1">1</option>
-	<option value="2">2</option>
-	<option value="3">3</option>
-	<option value="4">4</option>
-	<option value="5">5</option>
-</datalist>
-            </fieldset>
+    <form method="get" action="record.html" class="course-form">
+        <fieldset>
+            <label>Username* <input type="text" name="uname" id="username" required></label>
+            <label for="pssw">Password* <input id="pssw" type="text" name="pssw" pattern=".{8}" placeholder="8 alphanumeric characters long" required></label>
+            <label for="rpssw"> Re-enter Password*<input id="rpssw" type="text" name="rpssw" required></label>
+            <label for="email">Email*<input id="email" type="email" name="email" placeholder="someone@gmail.com" title="A valid email address." pattern="[a-zA-Z0-9_.\-]+@.com" required></label>
+            <label for="r">Page Rating</label>
+            <div id="rangevalue">0</div>
+            <input type="range" id="r" name="r" min="0" max="5" value="0" step="1" list="rangevalues">
+            <datalist id="rangevalues">
+                <option value="0">0</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+            </datalist>
+        </fieldset>
+        <input type="submit" value="Create My Account">
+    </form> 
+</main>
 
-    <input type="submit" value="Create My Account">
-       
-       
-    </main>
     <footer>
         <div class="info">
             <div class="copyright">
