--- a/chamber/index.html
+++ b/chamber/index.html
@@ -33,7 +33,7 @@
             <li><a href="#">Home</a></li>
             <li><a href="http://rajacks.github.io/wdd230/chamber/discover.html">Discover</a></li>
             <li><a href="">Directory</a></li>
-            <li><a href="">Join</a></li>
+            <li><a href="http://rajacks.github.io/wdd230/chamber/join.html">Join</a></li>
         </ul>
         </nav>   
     </header>
