--- a/chamber/join.html
+++ b/chamber/join.html
@@ -6,8 +6,8 @@
     <meta name="author" content="Raymund Antrone">
     <meta name="description" content="Philippines Chamber of Commerce home page">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;500;800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;500;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
     <link rel="stylesheet" href="styles/larger.css">
@@ -29,28 +29,27 @@
         </div>
         <a id="menu" href="#"></a>
         <nav>
-        <ul class="navigation">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="discover.html">Discover</a></li>
-            <li><a href="directory.html">Directory</a></li>
-            <li><a href="#">Join</a></li>
-        </ul>
+            <ul class="navigation">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="discover.html">Discover</a></li>
+                <li><a href="directory.html">Directory</a></li>
+                <li><a href="#">Join</a></li>
+            </ul>
         </nav>   
     </header>
     <h1 class="header">Membership Account Form</h1>
     <main class="grid-form">
         <section class="member-form">
-            <!-- <h1 class="header">Membership Account Form</h1> -->
             <form method="get" action="thankyou.html" class="mform">
                 <fieldset>
                     <legend>Applicant Information</legend>
                     <label for="fname">First Name* <input id="fname" type="text" name="fname" required></label>
                     <label for="lname">Last Name* <input id="lname" type="text" name="lname" required></label>
-                    <label for="position">Title/position*<input id="position" type="text" name="position"required></label>
-                    <label for="email">Email*<input id="email" type="email" name="email" placeholder="someone@email.com" required></label>
+                    <label for="position">Title/position* <input id="position" type="text" name="position" required></label>
+                    <label for="email">Email* <input id="email" type="email" name="email" placeholder="someone@email.com" required></label>
                     <label for="phone">Phone* <input id="phone" type="tel" name="phone" required></label>
-                    <label for="businessn">Business/Organization's Name*<input id="businessn" type="text" name="businessn" required></label>
-                    <label for="description">Business/Organization's Description<input id="description" type="text" name="description" placeholder="Please, use a maximum of two sentences."></label>
+                    <label for="businessn">Business/Organization's Name* <input id="businessn" type="text" name="businessn" required></label>
+                    <label for="description">Business/Organization's Description <input id="description" type="text" name="description" placeholder="Please, use a maximum of two sentences."></label>
                 </fieldset>
 
                 <fieldset>
@@ -58,60 +57,43 @@
                     <label><input type="radio" name="membership" value="gold">Gold Membership</label>
                     <label><input type="radio" name="membership" value="silver">Silver Membership</label>
                     <label><input type="radio" name="membership" value="bronze">Bronze Membership</label>
-                    <label><input type="radio" name="membership" value="non profit">NP Memberhsip</label>                       
+                    <label><input type="radio" name="membership" value="non profit">NP Membership</label>                       
                 </fieldset>
-                <input class="button" type="submit" value="Join Membership"></input>
+                <input class="button" type="submit" value="Join Membership">
                 <input type="hidden" id="lastModified" name="lastModified">
+            </form>
         </section>
 
-        <section class="member-desc" >
+        <section class="member-desc">
             <div class="details" id="gold">
                 <h2>Gold Membership</h2>
                 <h4>Price Range: Php 10,000- Php 20,000 Annually</h4>
-                <p>Gold Members enjoy of significant benefits that will make their business
-                gain more visiibility. Such benefits include prominent placement in the Chamber's 
-                directory, featured listings on the Chamber's website, and special recognition at events.</p>
-
-                <p>Golden Members have access to exclusive resources, such as market research
-                reports, industry insights, or educational materials. These resources can provide valuable 
-                information to help them grow and succeed in their business.</p>
+                <p>Gold Members enjoy significant benefits that will make their business gain more visibility. Such benefits include prominent placement in the Chamber's directory, featured listings on the Chamber's website, and special recognition at events.</p>
+                <p>Golden Members have access to exclusive resources, such as market research reports, industry insights, or educational materials. These resources can provide valuable information to help them grow and succeed in their business.</p>
             </div>
             <div class="details" id="silver">
                 <h2>Silver Membership</h2>
                 <h4>Price Range: Php 3,000 - Php 5,000 Annually</h4>
-                <p>Silver Members have access to exclusive networking events or forums, 
-                    providing them with additional opportunities to connect with other businesses 
-                    and community leaders. </p>
-
-                <p>Silver Members gain access to educational resources and workshops at 
-                    discounted rates. This could include seminars, training sessions, or webinars 
-                    that can benefit their business growth and development.</p>
+                <p>Silver Members have access to exclusive networking events or forums, providing them with additional opportunities to connect with other businesses and community leaders.</p>
+                <p>Silver Members gain access to educational resources and workshops at discounted rates. This could include seminars, training sessions, or webinars that can benefit their business growth and development.</p>
             </div>
             <div class="details" id="bronze">
                 <h2>Bronze Membership</h2>
-                <h4>Price Range: Php1,000 - Php 1,950 Annually</h4>
-                <p>Bronze Members receive foundational benefits, such as access to 
-                    networking events, participation in Chamber programs, and inclusion in 
-                    the Chamber's directory.</p>
-
-                    <p>Bronze Membersreceive access to basic educational resources 
-                    and workshops organized by the Chamber. These could include introductory 
-                    seminars or informational sessions on relevant business topics.</p>
+                <h4>Price Range: Php 1,000 - Php 1,950 Annually</h4>
+                <p>Bronze Members receive foundational benefits, such as access to networking events, participation in Chamber programs, and inclusion in the Chamber's directory.</p>
+                <p>Bronze Members receive access to basic educational resources and workshops organized by the Chamber. These could include introductory seminars or informational sessions on relevant business topics.</p>
             </div>
             <div class="details" id="np">
                 <h2>NP Membership- Php 500/month</h2>
                 <h4>5% Membership Discounts</h4>
-                <p>We are welcoming the members be fair as their budget</p>
-
-                <p>NP members are also invited to attend to their seminars and training, and to help to have a 
-                    schoolarship. </p>
+                <p>We are welcoming the members to be fair with their budget.</p>
+                <p>NP members are also invited to attend seminars and training, and to help to have a scholarship.</p>
             </div>
         </section>
-
     </main>
        
     <footer>
-        <p>Negross Occidental, Philippines, Bacolod City 6100</p>
+        <p>Negros Occidental, Philippines, Bacolod City 6100</p>
         <p><span id="year">© 2024</span> | Raymund Antrone  | WDD230</p>
         <p id="lastModified"></p>
     </footer>
