--- a/chamber/join.html
+++ b/chamber/join.html
@@ -40,6 +40,7 @@
     <h1 class="header">Membership Account Form</h1>
     <main class="grid-form">
         <section class="member-form">
+            <h2>Membership Form</h2>
             <form method="get" action="thankyou.html" class="mform">
                 <fieldset>
                     <legend>Applicant Information</legend>
