--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <li>Lesson 02: <a href="https://rajacks.github.io/wdd230/week02/design.html"> -Design- |</a><a href="https://rajacks.github.io/wdd230/week02/media-query.html">-Media Query- | </a><a href="https://rajacks.github.io/wdd230/week02/design-principles.html"> - Design Principles -</a> </li>
                         <li>Lesson 03: <a href="https://rajacks.github.io/wdd230/week03/lazyload.html">-Lazy Loading- |</a><a href="https://rajacks.github.io/wdd230/week03/responsive-images.html">-Responsive Image- | </a><a href="https://rajacks.github.io/wdd230/week03/bom.html"> -Book of Mormon -</a></li>
                         <li>Lesson 04: <a href="https://codepen.io/Rajacks/pen/BaEpPpE">-CSS Pusedo-Classes- |</a><a href="week04/images/combinators.png.png">-CSS Combinators- |</a><a href="https://rajacks.github.io/wdd230/week04/tablebuild.html">-Table-</a><a href="https://rajacks.github.io/wdd230/form.html">-Password Form Build</a><a href="https://rajacks.github.io/wdd230/Form-start/index.html">|-HTML Form-</a></li>
-                        <li>Lesson 05: <a href="https://rajacks.github.io/wdd230/week05/weather.html">-|Consuming a Weather APi|-</a><a href="https://codepen.io/Rajacks/pen/XWQgdYO">-|CSS Psuedo-elements|-</a></li>
+                        <li>Lesson 05: <a href="https://rajacks.github.io/wdd230/week05/weather.html">-Consuming a Weather APi|-</a><a href="https://codepen.io/Rajacks/pen/XWQgdYO">-|CSS Psuedo-elements|-</a></li>
                         <li>Lesson 06: <a href="#"></a></li>
                         <li>Lesson 07: <a href="#"></a></li>
                     </ul>
