--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="card-title"><h3>Learning Activities</h3></div>
                 <div class="card-content">
                     <ul class="lessons">
-                        <li>Lesson 01: <a href="#">Holy Layout | JS Pen</a></li>
+                        <li>Lesson 01: <a href="https://rajacks.github.io/wdd230/week01/holygrail.html">Holy Layout | JS Pen</a></li>
                         <li>Lesson 02: <a href="https://rajacks.github.io/wdd230/week02/design.html"> -Design- |</a><a href="https://rajacks.github.io/wdd230/week02/media-query.html">-Media Query- | </a><a href="https://rajacks.github.io/wdd230/week02/design-principles.html"> - Design Principles -</a> </li>
                         <li>Lesson 03: <a href="https://rajacks.github.io/wdd230/week03/lazyload.html">-Lazy Loading- |</a><a href="https://rajacks.github.io/wdd230/week03/responsive-images.html">-Responsive Image- | </a><a href="https://rajacks.github.io/wdd230/week03/bom.html"> -Book of Mormon -</a></li>
                         <li>Lesson 04: <a href="https://codepen.io/Rajacks/pen/BaEpPpE">-CSS Pusedo-Classes- |</a><a href="week04/images/combinators.png.png">-CSS Combinators- |</a><a href="https://rajacks.github.io/wdd230/week04/tablebuild.html">-Table-</a><a href="https://rajacks.github.io/wdd230/form.html">-Password Form Build</a><a href="https://rajacks.github.io/wdd230/Form-start/index.html">|-HTML Form-</a></li>
@@ -62,8 +62,12 @@
                 <div class="card-title"><h3>Information</h3></div>
                 <div class="card-content">
                     <div>Location</div>
-                    <div>Weather 🌤️</div>
-                    <p>Number of Visits: <span class="visits"></span></p>
+                    <p> Current Weather in Bacolod, Philippines<span id="current-temp"></span>°F</p>
+                    <figure>
+                        <img id="weather-icon" src="" atl="">
+                        <figcaption></figcaption>
+                    </figure>
+                    <p>Number of visits: <span class="visits"></span></p>
                 </div>
             </section>
         </div>
