--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
         <p id="lastModified"></p>
     </footer>
     <script src="scripts/getDates.js"></script>
+    <script src="scripts/links.js"></script>
     <script>
         document.getElementById("lastModified").innerText = "Last modified: " + document.lastModified;
     </script>
