--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <div>Location</div>
                     <p> Current Weather in Bacolod, Philippines<span id="current-temp"></span>°F</p>
                     <figure>
-                        <img id="weather-icon" src="" atl="">
+                        <img id="weather-icon" src="https://openweathermap.org/img/wn/${data.weather[0].icon}@2x.png" atl="">
                         <figcaption></figcaption>
                     </figure>
                     <p>Number of visits: <span class="visits"></span></p>
