--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <div>Location</div>
                     <p> Current Weather in Bacolod, Philippines<span id="current-temp"></span>°F</p>
                     <figure>
-                        <img id="weather-icon" src="" atl="">
+                        <img id="weather-icon" src="https://openweathermap.org/img/wn/01d@2x.png" alt="Weather Icon">
                         <figcaption></figcaption>
                     </figure>
                     <p>Number of visits: <span class="visits"></span></p>
