update-hompage-and-directory

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <li><a href="#" title="Home">Home</a></li>
             <li><a href="https://rajacks.github.io/wdd230/week01/chamber-site-plan.html" target="_blank">Site Plan</a></li>
             <li><a href="https://rajacks.github.io/wdd230/chamber/" target="_blank">Chamber</a></li>
-            <li><a href="byu-idaho.html" target="_blank">BYU-Idaho</a></li> 
-            <li><a href="scripture.html" target="_blank">Scripture</a></li>
+            <li><a href="https://www.byui.edu/" target="_blank">BYU-Idaho</a></li> 
+            <li><a href="https://www.churchofjesuschrist.org/study/scriptures/nt/philip/4?lang=eng#" target="_blank">Scripture</a></li>
         </ul>
     </nav>    
     <main>
