--- a/chamber/index.html
+++ b/chamber/index.html
@@ -72,11 +72,11 @@
     <section class="Mission Vision">
         <div class="statement">
             <h2>Mission Vision</h2>
-            Our mission vision about the bacolod city of smile are to be made known into the international cultures
+            <p>Our mission vision about the bacolod city of smile are to be made known into the international cultures
             And to represent the importance of natures and tourism . Where in  
             all can visit and Become more familiar with the places and delicacies
             of Bacolod City of Smile, Philippines. Thats not the end of the offer, We would like to let you know that this place has a lot of business where in we can offer,
-            The busines around that there were 281,153 establishments in the formal sector of the economy in 2021,.</p>
+            The busines around that there were 281,153 establishments in the formal sector of the economy in 2021.</p>
         </div>
         <img src="images/meetings-medium.webp" alt="Chamber working">
     </section>
