--- a/chamber/index.html
+++ b/chamber/index.html
@@ -163,7 +163,7 @@
         </div>  
     </section>
     <div id="meetGreetBanner" class="banner">
-        <p>Please come and visit us here in Bacolod to enjoy and to create memories with your family and friends</p>
+        <p>Join us for the weekly meet and greet every Wednesday at 7:00 pm</p>
         <button onclick="closeBanner()">Close</button>
     </div>
     <section class="businessSpotlights">
